changed button size; fixed nav bar spacing; added spacing between buttons

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,16 @@ body {
 
 .nav {
   color: #6D2E46;
-  text-align: center;
+  margin-bottom: 20px;
+  margin-right: 100px;
+  margin-left: 70px;
+  margin-top: 15px;
+}
+
+.btn {
+  background-color: #a26789;
+  padding-top: 10px;
+  margin-right: 35px;
+  align-items: center;
+  font-size: 15px;
 }
